--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="static/styles/style.css" </head>
+    <link rel="stylesheet" href="static/styles/style.css" />
+</head>
 
 <body>
     <h1>samura</h1>
     <p>
-        <a
-            href="https://www.google.com/url?sa=i&url=https%3A%2F%2Feldenring.fandom.com%2Fru%2Fwiki%2F%25D0%25A1%25D0%25B0%25D0%25BC%25D1%2583%25D1%2580%25D0%25B0%25D0%25B9&psig=AOvVaw0tQXma8Jhdlxw74p5hZcZm&ust=1677533727193000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCKCAkaSStP0CFQAAAAAdAAAAABAD" target="_blank">
+
+        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Feldenring.fandom.com%2Fru%2Fwiki%2F%25D0%25A1%25D0%25B0%25D0%25BC%25D1%2583%25D1%2580%25D0%25B0%25D0%25B9&psig=AOvVaw0tQXma8Jhdlxw74p5hZcZm&ust=1677533727193000&source=images&cd=vfe&ved=0CA0QjRxqFwoTCKCAkaSStP0CFQAAAAAdAAAAABAD"
+            target="_blank">
             Самурай </a> — светские феодалы-мужчины, кроме онна-бугэйся, начиная от крупных
         владетельных князей (даймё) и заканчивая мелкими дворянами. Основным
         оружием самурая были два японских меча — дайсё. В XIV—XIX веках это были
@@ -21,18 +23,21 @@
         пришнурованных друг к другу.
     </p>
     <p>
-        <span style="color: blue">
-            Эта история про двух великих самураев ацика и юрика</span>
+        <span style="color: rgb(73, 73, 219)">
+            Эта история про двух великих самураев </span>
     </p>
+    <div class="list-conteiner">
+        <img src="https://i1.sndcdn.com/artworks-000839217520-406vmy-t500x500.jpg" alt="samurai">
+    </div>
     <p>
-        В эпоху династии ци японскую империю защищали два самурая юрик и ацик были
-        они храбры и сильны ,все враги боялись оказаться на одном поле боя с
-        ациком и юриком ведь эти два самурая никогда не проигрывали свои битвы и
+        В эпоху династии ци японскую империю защищали два самурая были
+        они храбры и сильны ,все враги боялись оказаться на одном поле боя с ними ведь эти два самурая никогда не
+        проигрывали свои битвы и
         были друзьями что защищают друг другу тыл.
     </p>
     <p>
-        юрик и ацик с рождения вместе тренировались самурайскими единоборствами
-        каждый день юрик чистил катану до блеска а ацик точил ее до состоянии
+        самураи с рождения вместе тренировались самурайскими единоборствами
+        каждый день самурай сунь чистил катану до блеска а хунь точил ее до состоянии
         лезвии бритвы
     </p>
 </body>
